i hope i finished users

--- a/src/components/blog_pages/center_components/settings/Settings.module.css
+++ b/src/components/blog_pages/center_components/settings/Settings.module.css
@@ -9,9 +9,8 @@
     display: grid;
 
 
-    background-color: #F7F5FF;
+    background-color: #FFFFFF;
     border-radius: 20px;
-    border: 1px solid #DDE3EB;
 
 }
 
