--- a/src/components/blog_pages/center_components/profile/main_profile_css/MainProfile.module.css
+++ b/src/components/blog_pages/center_components/profile/main_profile_css/MainProfile.module.css
@@ -35,8 +35,7 @@
     padding: 2% 4% 0 4%;
 
 
-    background-color: #F7F5FF;
-    border: 1px solid #DDE3EB;
+    background-color: #FFFFFF;
 
     border-radius: 20px 20px 0 0;
 }
