--- a/src/components/blog_pages/center_components/profile/main_profile_css/MainProfileAside.module.css
+++ b/src/components/blog_pages/center_components/profile/main_profile_css/MainProfileAside.module.css
@@ -11,8 +11,7 @@
     grid-template-rows: 25% 65%;
     row-gap: 10%;
     padding: 8%;
-    border: 1px solid #DDE3EB;
-    background-color: #F7F5FF;
+    background-color: #FFFFFF;
 
     border-radius: 15px;
 }
@@ -63,8 +62,7 @@
     grid-template-rows: 25% 65%;
     row-gap: 10%;
 
-    background-color: #F7F5FF;
-    border: 1px solid #DDE3EB;
+    background-color: #FFFFFF;
     border-radius: 15px;
 }
 
