--- a/src/components/blog_pages/friends/MainUsers.module.css
+++ b/src/components/blog_pages/friends/MainUsers.module.css
@@ -10,9 +10,8 @@
 
     grid-template-rows: 60px 55px auto;
 
-    background-color: #F7F5FF;
+    background-color: #FFFFFF;
     border-radius: 20px 20px 0 0;
-    border: 1px solid #DDE3EB;
     border-bottom: none;
 
 }
@@ -79,7 +78,7 @@
 .friends_searching input {
     height: 100%;
     border: none;
-    background-color: rgba(246, 246, 254, 1);
+    background-color: transparent;
     font-size: 1.1em;
 }
 
