--- a/src/components/blog_pages/friends/components/oneUser/OneUser.module.css
+++ b/src/components/blog_pages/friends/components/oneUser/OneUser.module.css
@@ -1,10 +1,10 @@
 .one_friend {
     height: 60px;
     display: grid;
-    grid-template-columns: auto 100px;
+    grid-template-columns: 60% 37%;
     column-gap: 3%;
 
-    margin: 10px 0 15px 0;
+    margin: 10px 0 25px 0;
 }
 
 .navlink {
@@ -53,7 +53,7 @@
 
 .friend_functional {
     display: grid;
-    width: 90%;
+    width: 90px;
     grid-template-columns: 45% 45%;
     column-gap: 10%;
     justify-self: end;
@@ -67,7 +67,55 @@
     display: grid;
     justify-items: end;
 }
+.friend_functional_subscribers{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 33px auto;
+    column-gap: 5%;
+    justify-self: end;
+    align-self: start;
+}
+.chat {
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    display: grid;
+    justify-items: end;
+}
+.chat img {
+    width: 33px;
+    height: 33px;
+}
 
 .friend_functional img {
     width: 80%;
+}
+
+.section_buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 15px;
+}
+
+.section_buttons button {
+    border-radius: 20px;
+    border: none;
+
+    height: 31px;
+    padding: 0 20% 0 20%;
+    display: grid;
+    grid-template-columns: 13px auto;
+    column-gap: 10%;
+    justify-items: center;
+    align-items: center;
+}
+
+.add {
+    background-color: #855BD9;
+    color: #FFFFFF;
+}
+.delete {
+    background-color: #D2C1F4;
+    color: #543199;
 }
