--- a/src/components/blog_pages/center_components/profile/post/postMain/Post.module.css
+++ b/src/components/blog_pages/center_components/profile/post/postMain/Post.module.css
@@ -156,6 +156,9 @@
 }
 
 .button {
+    display: flex;
+    align-items: center;
+    gap: 5px;
     padding: 0;
     background-color: transparent;
     border: none;
