--- a/src/components/blog_pages/center_components/profile/profile/profile_new_post/ProfileNewPost.module.css
+++ b/src/components/blog_pages/center_components/profile/profile/profile_new_post/ProfileNewPost.module.css
@@ -10,6 +10,10 @@
     height: 150px;
 }
 
+.section textarea:focus{
+    outline: none;
+}
+
 .new_post_window {
     position: absolute;
     top: 30%;
