making a blog (in process) 2

--- a/src/components/blog_pages/center_components/profile/main_profile_css/MainProfileAside.module.css
+++ b/src/components/blog_pages/center_components/profile/main_profile_css/MainProfileAside.module.css
@@ -80,6 +80,12 @@
     background-color: #DDE3EB;
 }
 
+.photo_section img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 3px;
+}
 
 
 .shortInfoSection {
