--- a/src/components/blog_pages/center_components/profile/profile/profile_new_post/ProfileNewPost.module.css
+++ b/src/components/blog_pages/center_components/profile/profile/profile_new_post/ProfileNewPost.module.css
@@ -16,8 +16,11 @@
 
 .new_post_window {
     position: absolute;
-    top: 30%;
-    left: 33%;
+    display: grid;
+    justify-self: center;
+    align-self: center;
+    /*top: 30%;*/
+    /*left: 33%;*/
     width: 600px;
 
     background-color: rgba(247, 245, 255, 1);
@@ -65,6 +68,8 @@
     border: none;
     background-color: rgba(210, 193, 244, 1);
     color: rgba(84, 49, 153, 1);
+
+    font-weight: 600;
 }
 
 .publish {
@@ -73,6 +78,8 @@
     border: none;
     background-color: rgba(133, 91, 217, 1);
     color: rgba(246, 246, 254, 1);
+
+    font-weight: 600;
 }
 
 .input_photo2 {
