--- a/src/components/blog_pages/center_components/profile/profile/profile_setting/ProfileSetting.module.css
+++ b/src/components/blog_pages/center_components/profile/profile/profile_setting/ProfileSetting.module.css
@@ -31,7 +31,6 @@
     top: 0;
     left: 0;
     width: 671px;
-    height: 639px;
 
     background-color: rgba(255, 255, 255, 1);
     box-shadow: 0 0 15px 0 rgba(95, 110, 120, 1);
@@ -41,12 +40,11 @@
 }
 
 .edit_form {
-    height: 88%;
-    padding: 6%;
+    padding: 45px;
 
     display: grid;
-    grid-template-rows: 35% 64%;
-    row-gap: 1%;
+    grid-template-rows: 195px 364px auto;
+    row-gap: 5px;
 }
 
 .form_cont {
@@ -72,8 +70,8 @@
 
 .img_cover {
     position: relative;
-    width: 100%;
-    height: 100%;
+    width: 581px;
+    height: 139px;
     border-radius: 20px;
     object-fit: cover;
     z-index: 200;
@@ -136,10 +134,8 @@
     position: relative;
     top: -70px;
     left: 20px;
-    height: 250%;
-    width: 100%;
-    max-height: 114px;
-    max-width: 114px;
+    height: 114px;
+    width: 114px;
 
     border-radius: 50%;
     border: 3px solid rgba(247, 245, 255, 1);
@@ -155,6 +151,7 @@
     object-fit: cover;
     z-index: 200;
     transition: 1s;
+
 }
 
 .img_ava:hover {
@@ -226,15 +223,19 @@
     column-gap: 12%;
 }
 .box1 {
+    height: 80px;
     grid-area: A;
 }
 .box2 {
+    height: 80px;
     grid-area: B;
 }
 .box3 {
+    height: 80px;
     grid-area: C;
 }
 .box4 {
+    height: 80px;
     grid-area: D;
 }
 .textAreaBox {
@@ -262,9 +263,10 @@
 }
 
 .form input {
-    width: 94%;
-    padding: 0 3% 0 3%;
-    height: 70%;
+    width: 245px;
+    height: 38px;
+
+    padding: 0 5px 0 5px;
 
     border-radius: 10px;
     border: 1px solid rgba(95, 110, 120, 1);
